{
  "version": 4,
  "terraform_version": "0.12.3",
  "serial": 79,
  "lineage": "ebfe51db-4087-bbf8-ef4e-c542a8b301f0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ACS",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02e60be79e78fef21",
            "arn": "arn:aws:ec2:ap-south-1:304370290957:instance/i-01b8de915941548d5",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-01b8de915941548d5",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "acsKeyPair",
            "monitoring": false,
            "primary_network_interface_id": "eni-09bc4ad05f21f2c53",
            "private_dns": "ip-172-31-25-102.ap-south-1.compute.internal",
            "private_ip": "172.31.25.102",
            "public_dns": "ec2-13-233-81-139.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.233.81.139",
            "root_block_device": [
              {
                "delete_on_termination": false,
                "iops": 100,
                "volume_id": "vol-09cfef7999eb93023",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "acsSG"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-588a5131",
            "tags": {
              "Name": "ACS"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03224699bf0fce72b"
            ]
          },
          "depends_on": [
            "aws_instance.Windows-Node",
            "aws_key_pair.acsKeyPair",
            "aws_security_group.acs-sg",
            "data.template_file.node1",
            "data.template_file.node2",
            "data.template_file.node3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Centos-Node",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02e60be79e78fef21",
            "arn": "arn:aws:ec2:ap-south-1:304370290957:instance/i-0b0b4f340de2c2216",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0b0b4f340de2c2216",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "centosKeyPair",
            "monitoring": false,
            "primary_network_interface_id": "eni-0f6b47ef286acc8ac",
            "private_dns": "ip-172-31-29-174.ap-south-1.compute.internal",
            "private_ip": "172.31.29.174",
            "public_dns": "ec2-13-232-142-168.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.232.142.168",
            "root_block_device": [
              {
                "delete_on_termination": false,
                "iops": 100,
                "volume_id": "vol-00fbfffcc9f6d8272",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "CentosNodeSG"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-588a5131",
            "tags": {
              "Name": "CentosNode",
              "OS": "Centos"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0eeeebe87350e0ef1"
            ]
          },
          "depends_on": [
            "aws_key_pair.centosKeyPair",
            "aws_security_group.centos-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Ubuntu-Node",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04125d804acca5692",
            "arn": "arn:aws:ec2:ap-south-1:304370290957:instance/i-096cae38437a070a9",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-096cae38437a070a9",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ubuntuKeyPair",
            "monitoring": false,
            "primary_network_interface_id": "eni-0f72f5e48a94e361b",
            "private_dns": "ip-172-31-16-174.ap-south-1.compute.internal",
            "private_ip": "172.31.16.174",
            "public_dns": "ec2-13-233-231-222.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.233.231.222",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "iops": 100,
                "volume_id": "vol-06910dfc6bf9d148f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "UbuntuNodeSG"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-588a5131",
            "tags": {
              "Name": "UbuntuNode",
              "OS": "Ubuntu"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09ab5c70e7a25dda9"
            ]
          },
          "depends_on": [
            "aws_key_pair.ubuntuKeyPair",
            "aws_security_group.ubuntu-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Windows-Node",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09a8de20f12de517c",
            "arn": "arn:aws:ec2:ap-south-1:304370290957:instance/i-00c76a6f73fba26ed",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": true,
            "id": "i-00c76a6f73fba26ed",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "windowsKeyPair",
            "monitoring": false,
            "password_data": "Fs45iQCjlQocvmJ6D6JldYLOMfr8rgLGA1DHtftsvmZfILddqre0+dKo9jfB0AZemHsw5q7U4dR+aeM6Hk1WLRyejXmtk+7m7QpF6B2y4l/YzjDWokAbe8wFNyuYR/UnfYO+hW4KD2oJr94Wk1AwXlo/Jy7yQqvtASVKFf2h5wuhtUUfJxOO7xy6RpiuV2TBrIsKI7SmvOV1i43nDNRoRUSpDXRlc3NAsxcrL5pW/Stwa6f4HB+xbt/XqlgRuFL+KBfr4Sd5TGA4hD/AQf0XVJHZhuq8VGIybAzxq//5vHPLz/KeOtNNmjM3iz/gd48APDZ3+1RA+2XWP/M2OK/EDw==",
            "primary_network_interface_id": "eni-0ad4d1d3409b827e8",
            "private_dns": "ip-172-31-17-26.ap-south-1.compute.internal",
            "private_ip": "172.31.17.26",
            "public_dns": "ec2-13-235-95-119.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.235.95.119",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "iops": 100,
                "volume_id": "vol-0078bf5007d6a1d07",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "WindowsNodeSG"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-588a5131",
            "tags": {
              "Name": "WindowsNode",
              "OS": "Windows"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b1edaeaa1bcde694"
            ]
          },
          "depends_on": [
            "aws_key_pair.windowsKeyPair",
            "aws_security_group.windows-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "acs-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:304370290957:security-group/sg-03224699bf0fce72b",
            "description": "Security group for Ansible Controler Server",
            "egress": [],
            "id": "sg-03224699bf0fce72b",
            "ingress": [],
            "name": "acsSG",
            "name_prefix": null,
            "owner_id": "304370290957",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "acsSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-2000df49"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "centos-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:304370290957:security-group/sg-0eeeebe87350e0ef1",
            "description": "Security group for Centos Node",
            "egress": [],
            "id": "sg-0eeeebe87350e0ef1",
            "ingress": [],
            "name": "CentosNodeSG",
            "name_prefix": null,
            "owner_id": "304370290957",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "CentosNodeSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-2000df49"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ubuntu-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:304370290957:security-group/sg-09ab5c70e7a25dda9",
            "description": "Security group for Ubuntu Node",
            "egress": [],
            "id": "sg-09ab5c70e7a25dda9",
            "ingress": [],
            "name": "UbuntuNodeSG",
            "name_prefix": null,
            "owner_id": "304370290957",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "UbuntuNodeSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-2000df49"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "windows-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:304370290957:security-group/sg-0b1edaeaa1bcde694",
            "description": "Security group for Windows Node",
            "egress": [],
            "id": "sg-0b1edaeaa1bcde694",
            "ingress": [],
            "name": "WindowsNodeSG",
            "name_prefix": null,
            "owner_id": "304370290957",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "WindowsNodeSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-2000df49"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ACSAllowSSH",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-4206886968",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-03224699bf0fce72b",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.acs-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ACSOutboundtoAll",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1307923783",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-03224699bf0fce72b",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "depends_on": [
            "aws_security_group.acs-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "CentosNodeAllowSSH",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 22,
            "id": "sgrule-3764844270",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0eeeebe87350e0ef1",
            "self": false,
            "source_security_group_id": "sg-03224699bf0fce72b",
            "to_port": 22,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.acs-sg",
            "aws_security_group.centos-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "CentosOutboundtoAll",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-614037453",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0eeeebe87350e0ef1",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "depends_on": [
            "aws_security_group.centos-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "NodeAllowWinRM",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 5985,
            "id": "sgrule-1468230402",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b1edaeaa1bcde694",
            "self": false,
            "source_security_group_id": "sg-03224699bf0fce72b",
            "to_port": 5985,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.acs-sg",
            "aws_security_group.windows-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "UbuntuNodeAllowSSH",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 22,
            "id": "sgrule-834386674",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09ab5c70e7a25dda9",
            "self": false,
            "source_security_group_id": "sg-03224699bf0fce72b",
            "to_port": 22,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.acs-sg",
            "aws_security_group.ubuntu-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "UbuntuOutboundtoAll",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3962489718",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-09ab5c70e7a25dda9",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "depends_on": [
            "aws_security_group.ubuntu-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "WindowsNodeAllowRDP",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 3389,
            "id": "sgrule-295445623",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b1edaeaa1bcde694",
            "self": false,
            "source_security_group_id": null,
            "to_port": 3389,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.windows-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "WindowsOutboundtoAll",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1710587793",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0b1edaeaa1bcde694",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "depends_on": [
            "aws_security_group.windows-sg"
          ]
        }
      ]
    }
  ]
}